# Electricity-Consumption-Forecasting

./: pyproject.toml  requirements.txt
notebooks/: electricity_consumption_forecast.ipynb  hyperparameter_tuning.ipynb
scripts/: artificial_data_gen.py  data_preparation.py
src/forecaster/: __init__.py  evaluation.py  models.py  preprocessing.py  scalers.py  training.py
