[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "forecaster"
version = "0.0.1"
description = "Forecaster utilities for PA2"
authors = [ { name = "NechZ" } ]
readme = "README.md"
license = { text = "MIT" }

[tool.setuptools.packages.find]
where = ["src"]